implement MSE_Linear object

--- a/Assignment3/hw3.ipynb
+++ b/Assignment3/hw3.ipynb
@@ -176,33 +176,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Fletcher_Reeves(objfunc, func_params):\n",
+    "import abc\n",
+    "class BaseObjFunc():\n",
     "    '''\n",
-    "    Fletcher Reeves algo implementation for regression analysis\n",
+    "    Abstract class for objective function\n",
+    "    '''\n",
+    "    __metaclass__ = abc.ABCMeta\n",
+    "    @abc.abstractmethod\n",
+    "    def __call__(self):\n",
+    "        '''\n",
+    "        Every objective function should implement this function\n",
+    "        this function should return function value at specified point and relative gradient\n",
+    "        '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MSE_Linear(BaseObjFunc):\n",
+    "    '''\n",
+    "    Mean Square Error function implementation for linear regression\n",
+    "    '''\n",
+    "    def __init__(self, x, y):\n",
+    "        '''\n",
+    "        Constructor for MSE function\n",
+    "        Args:\n",
+    "        ---\n",
+    "            x : inputs vector\n",
+    "            y : observed outputs vector\n",
+    "            m, b : regression parameters\n",
+    "        '''\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __call__(self, m, b):\n",
+    "        '''\n",
+    "        Compute MSE error and  relative gradient\n",
+    "        '''\n",
+    "        yhat = m * self.x + b \n",
+    "        diff = yhat - self.y \n",
+    "        # Vectorized computation using a dot product to compute sum of squares\n",
+    "        cost = np.dot(diff.T, diff) / float(self.x.shape[0])\n",
     "\n",
+    "        # compute gradient vector\n",
+    "        partial_m = ( diff * self.x ).sum() * 2 / self.x.shape[0]\n",
+    "        partial_b = diff.sum() * 2 / self.x.shape[0]\n",
+    "        gradient = np.array([partial_m, partial_b])\n",
+    "\n",
+    "        # Cost is a 1x1 matrix, we need a scalar.\n",
+    "        return cost.flat[0], gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Golden_Section():\n",
+    "    '''\n",
+    "    Golden Section algo implemented\n",
+    "    '''\n",
+    "    raise NotImplementedError('Golden Section algo have not implemented')\n",
+    "    return minimum, min_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Fletcher_Reeves(objfunc, num_iter=15, ethlon = 1):\n",
+    "    '''\n",
+    "    Fletcher Reeves algo implementation for linear regression analysis\n",
     "    Args:\n",
     "    ---\n",
     "        objfunc : function reference of objective function\n",
-    "        func_params(ndarray) : objective function input parameters, it should be a ndarray\n",
+    "        num_iter : num of iterations\n",
+    "        ethlon : stop criterion\n",
     "    Return:\n",
     "    ---\n",
     "        minimum : minimum value of objective function\n",
     "        min_point : minimum point of objective function\n",
     "    '''\n",
     "    # random select start point \n",
-    "    start = np.random.randint(10,size=2)\n",
-    "    "
+    "    X = np.random.randint(10,size=2)\n",
+    "    # get cost and gradient at starting point\n",
+    "    cost, gradient_old = objfunc(X[0], X[1])\n",
+    "    # init search direction\n",
+    "    S_old = -1 * gradient_old\n",
+    "    counter = 1\n",
+    "    while True:\n",
+    "        # if reach criterion then stop\n",
+    "        if np.linalg.norm(S_old) < ethlon:\n",
+    "            minimum, _ = objfunc(X)\n",
+    "            return minimum, X\n",
+    "        if counter >= num_iter:\n",
+    "            counter = 1\n",
+    "            raise NotImplementedError('Step 5 have not implemented')\n",
+    "        # TODO : Find lambda s.t f(X + lambda * S_old ) is minimized\n",
+    "        _, lbda = Golden_Section()\n",
+    "        X = X + lbda * S_old\n",
+    "        _, gradient_new = objfunc(X)\n",
+    "        beta = gradient_new.dot(gradient_new) / gradient_old.dot(gradient_old)\n",
+    "        # update search direction and counter , record previous gradient \n",
+    "        S_old = -1 * gradient_new + beta * S_old\n",
+    "        gradient_old = gradient_new\n",
+    "        counter += 1\n",
+    "\n"
    ]
   },
   {
