I think i should consider use a more OOP way to finish Problem 2

--- a/Assignment3/hw3.ipynb
+++ b/Assignment3/hw3.ipynb
@@ -176,75 +176,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import abc\n",
-    "class BaseObjFunc():\n",
+    "def MSE_Linear(coef, x, y, lambdaExist = False, direction = None ):\n",
     "    '''\n",
-    "    Abstract class for objective function\n",
+    "    Compute MSE error , if lambdaExist = False, then comupte gradient too\n",
+    "    Args:\n",
+    "    ---\n",
+    "        coef(2d array) : coefficient\n",
+    "        x (nd array) : x points \n",
+    "        y (nd array) : y points\n",
+    "        lambdaExist (boolean) : return 1-D cost function or not\n",
+    "        direction (2d array) : search direction \n",
+    "    Returns:\n",
+    "    ---\n",
+    "    If lambdaExist = False \n",
+    "    ---\n",
+    "        cost : cost of given coef\n",
+    "        gradient : gradient of given coef  \n",
+    "    Else\n",
+    "    ---\n",
+    "        MSE_1D (function reference)  \n",
     "    '''\n",
-    "    __metaclass__ = abc.ABCMeta\n",
-    "    @abc.abstractmethod\n",
-    "    def __call__(self):\n",
-    "        '''\n",
-    "        Every objective function should implement this function\n",
-    "        this function should return function value at specified point and relative gradient\n",
-    "        '''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MSE_Linear(BaseObjFunc):\n",
-    "    '''\n",
-    "    Mean Square Error function implementation for linear regression\n",
-    "    '''\n",
-    "    def __init__(self, x, y):\n",
-    "        '''\n",
-    "        Constructor for MSE function\n",
-    "        Args:\n",
-    "        ---\n",
-    "            x : inputs vector\n",
-    "            y : observed outputs vector\n",
-    "            m, b : regression parameters\n",
-    "        '''\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "    def __call__(self, m, b):\n",
-    "        '''\n",
-    "        Compute MSE error and  relative gradient\n",
-    "        '''\n",
-    "        yhat = m * self.x + b \n",
-    "        diff = yhat - self.y \n",
-    "        # Vectorized computation using a dot product to compute sum of squares\n",
-    "        cost = np.dot(diff.T, diff) / float(self.x.shape[0])\n",
-    "\n",
-    "        # compute gradient vector\n",
-    "        partial_m = ( diff * self.x ).sum() * 2 / self.x.shape[0]\n",
-    "        partial_b = diff.sum() * 2 / self.x.shape[0]\n",
+    "    if not lambdaExist:\n",
+    "        yhat = coef[0] * x + coef[1]\n",
+    "        diff = yhat - y \n",
+    "        cost = np.dot(diff.T, diff) / float(x.shape[0])\n",
+    "        partial_m = ( diff * x ).sum() * 2 / x.shape[0]\n",
+    "        partial_b = diff.sum() * 2 / x.shape[0]\n",
     "        gradient = np.array([partial_m, partial_b])\n",
+    "        return cost.flat[0], gradient\n",
+    "    else:\n",
+    "        def MSE_1D(lbda):\n",
+    "            v = coef + lbda * direction\n",
+    "            yhat = v[0] * x + v[1]\n",
+    "            diff = yhat - y \n",
+    "            cost = np.dot(diff.T, diff) / float(x.shape[0])\n",
+    "            partial_m = ( diff * x ).sum() * 2 / x.shape[0]\n",
+    "            partial_b = diff.sum() * 2 / x.shape[0]\n",
+    "            gradient = np.array([partial_m, partial_b])\n",
+    "            return cost.flat[0], gradient\n",
+    "        return MSE_1D\n",
     "\n",
-    "        # Cost is a 1x1 matrix, we need a scalar.\n",
-    "        return cost.flat[0], gradient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Golden_Section():\n",
-    "    '''\n",
-    "    Golden Section algo implemented\n",
-    "    '''\n",
-    "    raise NotImplementedError('Golden Section algo have not implemented')\n",
-    "    return minimum, min_points"
+    "\n",
+    "\n"
    ]
   },
   {
