Add problem3-2 markdown block

--- a/Assignment4/hw4.ipynb
+++ b/Assignment4/hw4.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
       "text/plain": "-7.00123941778847"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 7
     }
    ],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
       "text/plain": "-6.036947381056418"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 8
     }
    ],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
       "text/plain": "10.0"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 9
     }
    ],
    "source": [
@@ -225,12 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.optimize import linprog\n",
-    "c = [1,1]\n",
+    "c = [-1,-1]\n",
     "A = [[50,24], [30,33]]\n",
     "b = [40*60,35*60]\n",
     "x0_bounds = (45, None)\n",
@@ -239,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "con: array([], dtype=float64)\n     fun: 50.0\n message: 'Optimization terminated successfully.'\n     nit: 0\n   slack: array([ 30., 585.])\n  status: 0\n success: True\n       x: array([45.,  5.])\n"
+     "text": "con: array([], dtype=float64)\n     fun: -51.25\n message: 'Optimization terminated successfully.'\n     nit: 2\n   slack: array([  0.  , 543.75])\n  status: 0\n success: True\n       x: array([45.  ,  6.25])\n"
     }
    ],
    "source": [
@@ -255,18 +255,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Actual Optimum Value : 0.0\nOptimal point (x_0, x_1) : (45.0,5.0)\n"
+     "text": "Actual Optimum Value : 1.25\nOptimal point (x_0, x_1) : (45.0,6.25)\n"
     }
    ],
    "source": [
-    "print(f'Actual Optimum Value : {res3_1.fun - 50}')\n",
+    "print(f'Actual Optimum Value : {res3_1.fun * -1 - 50}')\n",
     "print(f'Optimal point (x_0, x_1) : ({res3_1.x[0]},{res3_1.x[1]})')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 3-2"
    ]
   },
   {
