problem2 didnt get optimal point

--- a/Assignment4/hw4.ipynb
+++ b/Assignment4/hw4.ipynb
@@ -203,7 +203,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2"
+    "## Problem 2\n",
+    "### Define objective function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective_2(x):\n",
+    "    '''\n",
+    "    objective function of problem2\n",
+    "    Args:\n",
+    "    ---\n",
+    "        x : input vector\n",
+    "    Return:\n",
+    "    ---\n",
+    "        value : function value at vector x\n",
+    "    '''\n",
+    "    A = np.array([11.5, 92.5, 44.3, 98.1, 20.1, 6.1, 45.5, 31.0, 44.3])\n",
+    "    value = np.sum(np.divide(x, A)**2)\n",
+    "    return -1*value \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define bounds of F_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds_F = Bounds([0,0,0,0,0,0,0,0,0], [np.inf, np.inf, np.inf, np.inf, np.inf, np.inf, np.inf, np.inf, np.inf])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Linear Constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linear_constraints_D = LinearConstraint([[0.0298, -0.044, -0.044, 0, 0, 0, 0, 0, 0], \n",
+    "                                         [0, 0, -0.0138, 0.0329, 0.0329, -0.025, -0.025, 0, 0],\n",
+    "                                         [0, 0, 0, 0, 0.0279, 0, -0.0619, 0.0317, -0.0368]\n",
+    "                                        ], [4, 33, 31], [4, 33, 31])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solve optimization problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "`xtol` termination condition is satisfied.\nNumber of iterations: 651, function evaluations: 2990, CG iterations: 1022, optimality: 7.52e+43, constraint violation: 7.90e+44, execution time:  1.2 s.\n"
+    }
+   ],
+   "source": [
+    "np.random.seed(1024)\n",
+    "F1 = np.random.rand(9)\n",
+    "prob2_res = minimize(objective_2, F1, method='trust-constr', constraints=[linear_constraints_D], options={'disp':True}, bounds=bounds_F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[ 6.07445733e+45  1.79204078e+45  2.32202350e+45 -7.90291619e+44\n  1.78521470e+45  2.38137526e+43  3.74804650e+42  4.66912089e+30\n  1.34715994e+45]\n"
+    }
+   ],
+   "source": [
+    "print(prob2_res.x)"
    ]
   },
   {
