prob3-2 implementation failed

--- a/Assignment4/hw4.ipynb
+++ b/Assignment4/hw4.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,13 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "`xtol` termination condition is satisfied.\nNumber of iterations: 651, function evaluations: 2990, CG iterations: 1022, optimality: 7.52e+43, constraint violation: 7.90e+44, execution time:  1.2 s.\n"
+     "text": "`xtol` termination condition is satisfied.\nNumber of iterations: 651, function evaluations: 2990, CG iterations: 1022, optimality: 7.52e+43, constraint violation: 7.90e+44, execution time:  1.3 s.\n"
     }
    ],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 3-2"
+    "### Problem 3-2\n",
+    "Here i use exterior penalty function method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define combined objective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_obj(x):\n",
+    "    '''\n",
+    "    combine main objective and penalty function\n",
+    "    Args:\n",
+    "    ---\n",
+    "        x : input vector \n",
+    "    Return:\n",
+    "    ---\n",
+    "        value : objective function value\n",
+    "    '''\n",
+    "    # ==== original objective and penalty function ====\n",
+    "    def objective3(x):\n",
+    "        '''\n",
+    "        objective of problem3-2\n",
+    "        Args:\n",
+    "        ---\n",
+    "            x : input vector\n",
+    "        Return:\n",
+    "        ---\n",
+    "            value : function value of input vector\n",
+    "        '''\n",
+    "        value = x[0] + x[1] - 50\n",
+    "        return value\n",
+    "\n",
+    "    def g1(x):\n",
+    "        '''\n",
+    "        First penalty function\n",
+    "        '''\n",
+    "        return 50 * x[0] + 24 * x[1] - 2400\n",
+    "    \n",
+    "    def g2(x):\n",
+    "        '''\n",
+    "        Second penalty function\n",
+    "        '''\n",
+    "        return 30 * x[0] + 33 * x[1] - 2100\n",
+    "\n",
+    "    def g3(x):\n",
+    "        '''\n",
+    "        Third penalty function\n",
+    "        '''\n",
+    "        return 45 - x[0]\n",
+    "    \n",
+    "    def g4(x):\n",
+    "        '''\n",
+    "        Fourth penalty function\n",
+    "        '''\n",
+    "        return 5 - x[1]\n",
+    "    # =================================================\n",
+    "    r = x[-1]\n",
+    "    #TODO : convert to exterior method\n",
+    "    return value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implement algorithm"
    ]
   },
   {
