finshish problem2 and problem3-2

--- a/Assignment4/hw4.ipynb
+++ b/Assignment4/hw4.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
     "    '''\n",
     "    A = np.array([11.5, 92.5, 44.3, 98.1, 20.1, 6.1, 45.5, 31.0, 44.3])\n",
     "    value = np.sum(np.divide(x, A)**2)\n",
-    "    return -1*value \n"
+    "    return value \n"
    ]
   },
   {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,13 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "linear_constraints_D = LinearConstraint([[0.0298, -0.044, -0.044, 0, 0, 0, 0, 0, 0], \n",
-    "                                         [0, 0, -0.0138, 0.0329, 0.0329, -0.025, -0.025, 0, 0],\n",
-    "                                         [0, 0, 0, 0, 0.0279, 0, -0.0619, 0.0317, -0.0368]\n",
+    "d = np.array([0.0298, 0.044, 0.044, 0.0138, 0.0329, 0.0329, 0.0279, 0.025, 0.025, 0.0619, 0.0317, 0.0368])\n",
+    "linear_constraints_D = LinearConstraint([[d[0], -1*d[1], -1*d[2], 0, 0, 0, 0, 0, 0], \n",
+    "                                         [0, 0, -1*d[3], d[4], d[5], -1*d[7], -1*d[8], 0, 0],\n",
+    "                                         [0, 0, 0, 0, d[6], 0, -1*d[9], d[-2], -1*d[-1]]\n",
     "                                        ], [4, 33, 31], [4, 33, 31])"
    ]
   },
@@ -272,34 +273,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "`xtol` termination condition is satisfied.\nNumber of iterations: 651, function evaluations: 2990, CG iterations: 1022, optimality: 7.52e+43, constraint violation: 7.90e+44, execution time:  1.3 s.\n"
+     "text": "[1. 1. 1. 1. 1. 1. 1. 1. 1.]\n`gtol` termination condition is satisfied.\nNumber of iterations: 279, function evaluations: 2710, CG iterations: 474, optimality: 4.51e-09, constraint violation: 7.11e-15, execution time: 0.77 s.\n"
     }
    ],
    "source": [
     "np.random.seed(1024)\n",
-    "F1 = np.random.rand(9)\n",
+    "F1 = np.ones(9)\n",
+    "print(F1)\n",
     "prob2_res = minimize(objective_2, F1, method='trust-constr', constraints=[linear_constraints_D], options={'disp':True}, bounds=bounds_F)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[ 6.07445733e+45  1.79204078e+45  2.32202350e+45 -7.90291619e+44\n  1.78521470e+45  2.38137526e+43  3.74804650e+42  4.66912089e+30\n  1.34715994e+45]\n"
+     "text": "[1.34228188e+02 1.57343175e-07 2.08046685e-08 7.07677227e+02\n 2.95362289e+02 3.24053147e-06 6.16636711e-08 7.17961897e+02\n 2.47025848e-07]\n"
     }
    ],
    "source": [
     "print(prob2_res.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "940.5962998908748\n"
+    }
+   ],
+   "source": [
+    "print(objective_2(prob2_res.x))"
    ]
   },
   {
@@ -382,16 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main_obj(x):\n",
+    "def main_obj(x, r):\n",
     "    '''\n",
     "    combine main objective and penalty function\n",
     "    Args:\n",
     "    ---\n",
     "        x : input vector \n",
+    "        r : r value of penalty term\n",
     "    Return:\n",
     "    ---\n",
     "        value : objective function value\n",
@@ -408,7 +426,7 @@
     "            value : function value of input vector\n",
     "        '''\n",
     "        value = x[0] + x[1] - 50\n",
-    "        return value\n",
+    "        return -1 * value\n",
     "\n",
     "    def g1(x):\n",
     "        '''\n",
@@ -434,8 +452,12 @@
     "        '''\n",
     "        return 5 - x[1]\n",
     "    # =================================================\n",
-    "    r = x[-1]\n",
     "    #TODO : convert to exterior method\n",
+    "    value = objective3(x) + r * ( max(0, g1(x))**2 + max(0, g2(x))**2 + max(0, g3(x))**2 + max(0, g2(x))**2 )\n",
+    "    # print(f'Cost : {value}')\n",
+    "    # print(f'Input vector : {x}')\n",
+    "    # print(f'r : {r}')\n",
+    "    # input('Break')\n",
     "    return value"
    ]
   },
@@ -444,6 +466,61 @@
    "metadata": {},
    "source": [
     "#### Implement algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Optimization terminated successfully.\n         Current function value: -1.543837\n         Iterations: 74\n         Function evaluations: 142\nOptimization terminated successfully.\n         Current function value: -1.543837\n         Iterations: 38\n         Function evaluations: 75\n[44.45833222  7.37933334]\n"
+    }
+   ],
+   "source": [
+    "x_prev = np.array([0,0])\n",
+    "r = 1\n",
+    "c = np.random.randint(1,2)\n",
+    "x_next = np.array([1,1])\n",
+    "tol = 1e-3\n",
+    "while np.linalg.norm(x_prev - x_next) > 1e-3:\n",
+    "    res = minimize(main_obj, x_next, args=(r), method='nelder-mead', options={'xatol':1e-3, 'disp':True})\n",
+    "    x_prev = x_next.copy()\n",
+    "    x_next = res.x.copy()\n",
+    "    r = c * r\n",
+    "    \n",
+    "print(x_next)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1.844641225357286\n"
+    }
+   ],
+   "source": [
+    "print(x_next[0]+x_next[1]-50)"
    ]
   },
   {
