set a more critical criterion

--- a/Assignment4/hw4.ipynb
+++ b/Assignment4/hw4.ipynb
@@ -452,12 +452,7 @@
     "        '''\n",
     "        return 5 - x[1]\n",
     "    # =================================================\n",
-    "    #TODO : convert to exterior method\n",
     "    value = objective3(x) + r * ( max(0, g1(x))**2 + max(0, g2(x))**2 + max(0, g3(x))**2 + max(0, g2(x))**2 )\n",
-    "    # print(f'Cost : {value}')\n",
-    "    # print(f'Input vector : {x}')\n",
-    "    # print(f'r : {r}')\n",
-    "    # input('Break')\n",
     "    return value"
    ]
   },
@@ -470,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 140,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -490,7 +485,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Optimization terminated successfully.\n         Current function value: -1.543837\n         Iterations: 74\n         Function evaluations: 142\nOptimization terminated successfully.\n         Current function value: -1.543837\n         Iterations: 38\n         Function evaluations: 75\n[44.45833222  7.37933334]\n"
+     "text": "Optimization terminated successfully.\n         Current function value: -1.543837\n         Iterations: 88\n         Function evaluations: 169\nOptimization terminated successfully.\n         Current function value: -1.543837\n         Iterations: 44\n         Function evaluations: 87\nOptimum point : [44.45833227  7.37934256]\n"
     }
    ],
    "source": [
@@ -498,25 +493,25 @@
     "r = 1\n",
     "c = np.random.randint(1,2)\n",
     "x_next = np.array([1,1])\n",
-    "tol = 1e-3\n",
-    "while np.linalg.norm(x_prev - x_next) > 1e-3:\n",
-    "    res = minimize(main_obj, x_next, args=(r), method='nelder-mead', options={'xatol':1e-3, 'disp':True})\n",
+    "tol = 1e-5\n",
+    "while np.linalg.norm(x_prev - x_next) > tol:\n",
+    "    res = minimize(main_obj, x_next, args=(r), method='nelder-mead', options={'xatol':tol, 'disp':True})\n",
     "    x_prev = x_next.copy()\n",
     "    x_next = res.x.copy()\n",
     "    r = c * r\n",
     "    \n",
-    "print(x_next)\n"
+    "print(f'Optimum point : {x_next}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "1.844641225357286\n"
+     "text": "1.8376748243139787\n"
     }
    ],
    "source": [
